tests/sksl/errors/Ossfuzz31410.glsl
### Compilation failed:

error: 2: type mismatch: '*' cannot operate on 'float', 'int'
1 error
